<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvRetake"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/notification_retake"
        app:layout_constraintEnd_toStartOf="@+id/switchRetake"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchRetake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvRetake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRetake" />

    <TextView
        android:id="@+id/tvCheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/notification_check"
        app:layout_constraintEnd_toEndOf="@+id/tvRetake"
        app:layout_constraintStart_toStartOf="@+id/tvRetake"
        app:layout_constraintTop_toBottomOf="@+id/tvRetake" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvCheck"
        app:layout_constraintEnd_toEndOf="@+id/switchRetake"
        app:layout_constraintStart_toStartOf="@+id/switchRetake"
        app:layout_constraintTop_toTopOf="@+id/tvCheck" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchScheduleBehind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvScheduleBehind"
        app:layout_constraintEnd_toEndOf="@+id/switchRetake"
        app:layout_constraintStart_toStartOf="@+id/switchRetake"
        app:layout_constraintTop_toTopOf="@+id/tvScheduleBehind" />

    <TextView
        android:id="@+id/tvScheduleBehind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/notification_schedule_behind"
        app:layout_constraintEnd_toEndOf="@+id/tvCheck"
        app:layout_constraintStart_toStartOf="@+id/tvRetake"
        app:layout_constraintTop_toBottomOf="@+id/tvCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>